# leetcode

contest/beeweekly_105/: pyproject.toml
contest/beeweekly_105/n1/: test_solution.py
contest/beeweekly_105/n2/: solution.py  test_solution.py
contest/beeweekly_105/n2709_greatest_common_division_traversal/: test_solution.py
contest/beeweekly_105/n3/: test_solution.py
contest/weekly_345/: pyproject.toml
contest/weekly_345/n2683_neighboring_bitwise_xor/: solution.py
contest/weekly_345/n2685_count_the_number_of_complete_components/: solution.py  test_solution.py
python/: .gitignore  pyproject.toml
python/200/: solution.py
python/2316/: solution_test.py
python/460/: 460-LFU_Cashe.py  460-LFU_Cashe_deque.py  460-LFU_Cashe_dict_accepted.py  460-LFU_Cashe_my_linken_list.py
python/461/: 461-Hamming_distance.py
python/953/: 953-Verifying_an_Alien_Dictionary.py  953-Verifying_an_Alien_Dictionary_v2.py  953-Verifying_an_Alien_Dictionary_v3.py  953-Verifying_an_Alien_Dictionary_v4.py
python/954/: 954-Array_of_doubled_pairs.py
python/easy/n1232_check_if_it_is_a_straight_line/: solution.py  solution_other.py  test_solution.py
python/easy/n1281_substract_the_product_and_sum_of_digits_of_an_integer/: description.md  test_solution.py
python/easy/n1295_find_numbers_with_even_number_of_digits/: description.md
python/easy/n1299_replace_elmnts_with_grtst_elmnt_on_the_rght_side/: solution.py
python/easy/n1346_check_if_n_and_its_double_exist/: solution.py  test_solution.py
python/template/: solution.py  test_solution.py
(+528 files in other folders)
