[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = "leetcode prombles, python"
authors = ["Dmitrii-Kopeikin <kopeikindp@gmail.com>"]
readme = "README.md"
packages = [{include = "leetcode_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
