[tool.poetry]
name = "weekly-346"
version = "0.1.0"
description = ""
authors = ["Dmitrii-Kopeikin <kopeikindp@gmail.com>"]
readme = "README.md"
packages = [{include = "weekly_346"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
