[tool.poetry]
name = "weekly-345"
version = "0.1.0"
description = ""
authors = ["Dmitrii-Kopeikin <kopeikindp@gmail.com>"]
readme = "README.md"
packages = [{include = "weekly_345"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
